--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b57a94">  <td>17/10/11 14:14:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.craftsvilla.test.TestCart@d2cc05a]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@395629617</td>   <td></td> </tr>
-<tr bgcolor="b57a94">  <td>17/10/11 14:12:43</td>   <td>-134031</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:com.craftsvilla.test.TestCart@d2cc05a]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td>  <td>main@395629617</td>   <td></td> </tr>
-<tr bgcolor="7f6473">  <td>17/10/11 14:13:45</td>   <td>-71939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCart.testCartDetails()[pri:0, instance:com.craftsvilla.test.TestCart@d2cc05a]">testCartDetails</td> 
-  <td>main@395629617</td>   <td></td> </tr>
+<tr bgcolor="7e8f62">  <td>17/11/15 09:53:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testTest.test()[pri:0, instance:com.craftsvilla.test.testTest@3c0ecd4b]">test</td> 
+  <td>main@1340328248</td>   <td></td> </tr>
 </table>
