--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,2 +1,2 @@
-<h2>Reporter output</h2><table><tr><td>Your cart is Empty</td></tr>
+<h2>Reporter output</h2><table><tr><td>Tesing jenkins</td></tr>
 </table>
