--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e8f62">  <td>17/11/15 09:53:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testTest.test()[pri:0, instance:com.craftsvilla.test.testTest@3c0ecd4b]">test</td> 
-  <td>main@1340328248</td>   <td></td> </tr>
+<tr bgcolor="acaea5">  <td>17/11/15 10:14:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:com.craftsvilla.test.TestCart@5f2108b5]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1698097425</td>   <td></td> </tr>
+<tr bgcolor="7e8f62">  <td>17/11/15 10:14:22</td>   <td>20436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCart.testCartDetails()[pri:0, instance:com.craftsvilla.test.TestCart@5f2108b5]">testCartDetails</td> 
+  <td>main@1698097425</td>   <td></td> </tr>
+<tr bgcolor="acaea5">  <td>17/11/15 10:14:28</td>   <td>26638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.craftsvilla.test.TestCart@5f2108b5]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1698097425</td>   <td></td> </tr>
 </table>
